# fastapi-http-websocket

./: .cookiecutterignore  .dockerignore  .env.dev.example  .env.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  AGENTS.md  AUTHENTICATION_REFACTORING.md  CLAUDE.md  CODEBASE_IMPROVEMENTS.md  FIXES.md  IMPROVEMENTS.md  MONITORING.md  Makefile  NOTES  PROJECT_REVIEW.md  QUICKSTART_AUTH.md  README.md  actions.json  alembic.ini  cli.py  cookiecutter.json  generate_ws_handler.py  get_token.py  grafana-dashboard.json  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  run_server.py  sitemap.xml  temp.txt  test_protobuf_websocket.py  user-logs-tmp.py  uvicorn_filters.py  (+1 more)
app/: __init__.py  (+18 more)
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  MONITORING.md  Makefile  README.md  TODO's  actions.json  alembic.ini  cli.py  pyproject.toml  requirements.txt  uvicorn_logging.json
{{cookiecutter.project_slug}}/docker/: .kc_env  .pg_env  .srv_env  Dockerfile  docker-compose.yml
{{cookiecutter.project_slug}}/docker/grafana/provisioning/dashboards/: application-logs.json  keycloak-metrics.json
{{cookiecutter.project_slug}}/docker/loki/: loki-config.yml
{{cookiecutter.project_slug}}/docker/prometheus/: prometheus.yml
{{cookiecutter.project_slug}}/docker/traefik/: traefik.yml
{{cookiecutter.project_slug}}/docs/: README.md
{{cookiecutter.project_slug}}/docs/guides/: ADVANCED_FEATURES.md
{{cookiecutter.project_slug}}/scripts/: scan_for_outdated_pkgs.py  test_migrations.py  {% if cookiecutter.use_keycloak == "y" %}get_token.py{% endif %}
{{cookiecutter.project_slug}}/templates/: ws_handler.jinja
{{cookiecutter.project_slug}}/tests/: conftest.py  test_audit_logger.py  test_audit_middleware.py  test_auth_backend.py  test_auth_basic.py  test_auth_error_handling.py  test_check.py  test_correlation_id.py  test_decorator_rbac.py  test_error_envelopes.py  test_error_handler.py  test_file_io.py  test_health.py  test_http_decorator_rbac.py  test_ip_utils.py  test_logging.py  test_logging_context.py  test_metrics.py  test_migrations.py  test_pagination.py  test_pagination_cache.py  test_profiling.py  test_prometheus.py  test_protobuf_converter.py  test_rate_limit_middleware.py  test_rate_limiting.py  test_redis_storage.py  test_request_size_limit.py  test_routing.py  test_security_headers.py  test_startup_validation.py  test_submodule_a.py  test_token_cache.py  test_unix_timestamp_field.py  test_websocket.py  test_websocket_connection_manager.py
{{cookiecutter.project_slug}}/tests/chaos/: test_database_failures.py  test_keycloak_failures.py  test_redis_failures.py
{{cookiecutter.project_slug}}/tests/integration/: test_keycloak_integration.py
{{cookiecutter.project_slug}}/tests/load/: test_websocket_load.py
{{cookiecutter.project_slug}}/tests/mocks/: auth_mocks.py  redis_mocks.py  repository_mocks.py  websocket_mocks.py
{{cookiecutter.project_slug}}/{% if cookiecutter.use_keycloak == "y" %}db{% endif %}/: {% if cookiecutter.use_keycloak == "y" %}create.sql{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/: __init__.py  auth.py  constants.py  exceptions.py  keycloak_manager.py  logging.py  protocols.py  routing.py  settings.py  startup_validation.py  types.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/api/http/: audit_logs.py  author.py  health.py  profiling.py  {% if cookiecutter.enable_audit_logging == 'yes' %}audit_logs.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/api/ws/: connection_manager.py  constants.py  validation.py  websocket.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/api/ws/consumers/: web.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/commands/: base.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/dependencies/: __init__.py  permissions.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/fields/: __init__.py  unix_timestamp.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/managers/: keycloak_manager.py  rbac_manager.py  websocket_connection_manager.py  {% if cookiecutter.use_keycloak == "y" %}keycloak_manager.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/middlewares/: action.py  audit_middleware.py  correlation_id.py  logging_context.py  prometheus.py  rate_limit.py  request_size_limit.py  websocket_connection_manager.py  {% if cookiecutter.enable_audit_logging == 'yes' %}audit_middleware.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/models/: base.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/repositories/: base.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/schemas/: errors.py  filters.py  generic_typing.py  request.py  response.py  roles.py  types.py  user.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/schemas/proto/: __init__.py  websocket_pb2.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/settings/: __init__.py  models.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/storage/: db.py  redis.py  {% if cookiecutter.use_redis == "y" %}redis.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/storage/migrations/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/tasks/: kc_user_session.py  redis_pool_metrics_task.py  {% if cookiecutter.use_redis == "y" and cookiecutter.use_keycloak == "y" %}kc_user_session.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/utils/: __init__.py  audit_logger.py  error_formatter.py  error_handler.py  file_io.py  ip_utils.py  metrics.py  pagination_cache.py  profiling.py  protobuf_converter.py  query_monitor.py  rate_limiter.py  singleton.py  token_cache.py  {% if cookiecutter.enable_audit_logging == 'yes' %}audit_logger.py{% endif %}
{{cookiecutter.project_slug}}/{{cookiecutter.module_name}}/utils/metrics/: __init__.py  audit.py  auth.py  database.py  http.py  redis.py  websocket.py
(+532 files in other folders)
