[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "greenlet>=3.1.1",
    "icecream>=2.1.3",
    "jsonschema>=4.23.0",
    "pydantic-settings>=2.7.1",
    "python-keycloak>=5.1.1",
    "redis>=5.2.1",
    "sqlmodel>=0.0.22",
    "uvicorn>=0.34.0",
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "interrogate>=1.7.0",
    "ipython>=8.31.0",
    "jinja2>=3.1.5",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.1",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.4",
    "skjold>=0.6.2",
    "typer>=0.15.1",
    "typos>=1.29.0",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.vulture]
ignore_names = [
    "create_author_endpoint",
    "get_authors_endpoint",
    "get_paginated_authors_endpoint",
    "Web",
    "dispatch",
    "get_authors_handler",
    "get_paginated_authors_handler",
    "authenticate"
]
# exclude = ["app/api/ws/constants.py"]

[tool.typos]
files.extend-exclude = [".security_reports/*", "realm-export.json"]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    ".venv",
    ".worktree"
]
line-length = 79
indent-width = 4
target-version = "py312"


[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
# ignore = ["F401", "F811", "F821"]
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.interrogate]
ignore-module = true
ignore-init-method = true
ignore-nested-functions = true
ignore-property-decorators = true
fail-under = 80
verbose=2
ignore-regex = ["__new__"]
exclude = [
    ".worktree",
    "tests",
    "scripts",
    "app/settings.py",
    "app/logging.py",
    "app/schemas/*"
]

[tool.skjold]
sources = ["github", "pyup", "gemnasium"]  # Sources to check against.
report-only = true                         # Report only, always exit with zero.
report-format = 'json'                     # Output findings as `json`. Default is 'cli'.
cache_dir = '.skjold_cache'                # Cache location (default: `~/.skjold/cache`).
cache_expires = 86400                      # Cache max. age.
verbose = true
